WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129501
[Mac, iOS] Incorrect ordering of construction arguments for out-of-band text elements
https://bugs.webkit.org/show_bug.cgi?id=129501
Summary
[Mac, iOS] Incorrect ordering of construction arguments for out-of-band text ...
Brent Fulgham
Reported
2014-02-28 11:52:59 PST
I made a mistake in the order of arguments passed to the new "createOutOfBand" constructor for the PlatformTextTrack in HTMLMediaElement::outOfBandTrackSources. The label and source URLs were reversed. This patch corrects that mistake so that the NSDictionary of items passed to AVFoundation is correct.
Attachments
Patch
(1.50 KB, patch)
2014-02-28 12:04 PST
,
Brent Fulgham
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-02-28 11:53:32 PST
<
rdar://problem/16198587
>
Brent Fulgham
Comment 2
2014-02-28 12:04:19 PST
Created
attachment 225479
[details]
Patch
Brent Fulgham
Comment 3
2014-02-28 13:07:25 PST
Committed
r164881
: <
http://trac.webkit.org/changeset/164881
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug