[Mac, iOS] Incorrect ordering of construction arguments for out-of-band text elements https://bugs.webkit.org/show_bug.cgi?id=129501 <rdar://problem/16198587>

Reviewed by Eric Carlson.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::parseAttribute): Correct order of arguments
to PlatformTextTrack.


Canonical link: https://commits.webkit.org/147565@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164881 268f45cc-cd09-0410-ab3c-d52691b4dbfc